# musicbrainz-data-service

./: .gitignore  .gitmodules  README.md  devel.cfg  devel.cfg.example  musicbrainz-data-service.cabal  sources.txt
src/: Main.hs
src/MusicBrainz/: API.hs  Service.hs
src/MusicBrainz/API/: Artist.hs  ArtistCredit.hs  ArtistType.hs  Common.hs  Create.hs  Edit.hs  Editor.hs  FindLatest.hs  Gender.hs  Ipi.hs  Iswc.hs  JSON.hs  Label.hs  Recording.hs  Release.hs  ReleaseGroup.hs  Update.hs  Url.hs  Work.hs
test/suite/: Common.hs  Handlers.hs  JSON.hs  Parsers.hs  Tests.hs  Wrappers.hs
