name: musicbrainz-data-service
version: 0.1.0.0
license: GPL-2
license-file: LICENSE
author: MetaBrainz Foundation
build-type: Simple
cabal-version: >=1.8

executable musicbrainz-data-service
  main-is: Main.hs
  hs-source-dirs: src
  build-depends:
    aeson,
    attoparsec,
    base,
    configurator,
    containers,
    lens,
    musicbrainz-data,
    digestive-functors,
    digestive-functors-aeson,
    mtl,
    snap,
    snap-core,
    snap-server,
    text,
    transformers
  ghc-options: -Wall -fwarn-tabs -funbox-strict-fields -O2
               -fno-warn-orphans -fno-warn-unused-do-bind
               -threaded -rtsopts

