name: musicbrainz-data-service
version: 0.1.0.0
license: GPL-2
license-file: LICENSE
author: MetaBrainz Foundation
build-type: Simple
cabal-version: >=1.10

executable musicbrainz-data-service
  default-language: Haskell2010
  main-is: Main.hs
  hs-source-dirs: src
  build-depends:
    aeson,
    aeson-lens,
    base,
    configurator,
    containers,
    digestive-functors >= 0.6,
    digestive-functors-aeson >= 1.1,
    lens >= 3.8,
    mtl,
    musicbrainz-data,
    network,
    safe,
    snap,
    snap-core,
    snap-server,
    stm,
    text,
    time,
    transformers,
    unordered-containers
  ghc-options: -Wall -fwarn-tabs -funbox-strict-fields -O2
               -fno-warn-orphans -fno-warn-unused-do-bind
               -threaded -rtsopts


Test-Suite tests
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: Tests.hs
  hs-source-dirs:
    test/suite
    src
  build-depends:
    aeson,
    aeson-qq,
    base >= 4.5 && < 4.7,
    bytestring,
    configurator,
    containers,
    digestive-functors >= 0.6,
    digestive-functors-aeson >= 1.1,
    lens >= 3.8,
    MonadCatchIO-mtl >= 0.3.0.0 && <0.4,
    mtl,
    musicbrainz-data,
    network,
    snap,
    snap-core,
    stm,
    test-framework,
    test-framework-hunit,
    text,
    time,
    transformers,
    unordered-containers
  ghc-options: -Wall -fwarn-tabs -funbox-strict-fields -O2
               -fno-warn-orphans -fno-warn-unused-do-bind

