name: musicbrainz-data-service
version: 0.1.0.0
license: GPL-2
license-file: LICENSE
author: MetaBrainz Foundation
build-type: Simple
cabal-version: >=1.10

executable musicbrainz-data-service
  default-language: Haskell2010
  main-is: Main.hs
  hs-source-dirs: src
  build-depends:
    aeson,
    aeson-lens,
    base >= 4.5 && < 4.7,
    configurator,
    containers >= 0.4.2.1 && < 0.6,
    digestive-functors >= 0.6,
    digestive-functors-aeson >= 1.1,
    errors,
    either,
    lens >= 3.8,
    mtl >= 2.0.1.0 && < 2.2,
    musicbrainz-data,
    network >= 2.3.0.10,
    safe,
    snap,
    snap-core,
    snap-server,
    stm >= 2.2.0.1,
    text,
    time >= 1.4,
    transformers >= 0.2.2.0 && < 0.4,
    unordered-containers
  ghc-options: -Wall -fwarn-tabs -funbox-strict-fields -O2
               -fno-warn-orphans -fno-warn-unused-do-bind
               -threaded -rtsopts -Werror


Test-Suite tests
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: Tests.hs
  hs-source-dirs:
    test/suite
    src
  build-depends:
    aeson,
    aeson-qq,
    base >= 4.5 && < 4.7,
    bytestring >= 0.9.2.1 && < 0.11,
    configurator,
    containers >= 0.4.2.1 && < 0.6,
    digestive-functors >= 0.6,
    digestive-functors-aeson >= 1.1,
    errors,
    either,
    lens >= 3.8,
    MonadCatchIO-mtl >= 0.3.0.0 && <0.4,
    mtl >= 2.0.1.0 && < 2.2,
    musicbrainz-data,
    network >= 2.3.0.10,
    snap,
    snap-core,
    stm >= 2.2.0.1,
    test-framework,
    test-framework-hunit,
    text >= 0.11.1.13 && < 0.12,
    time >= 1.4,
    transformers >= 0.2.2.0 && < 0.4,
    unordered-containers
  ghc-options: -Wall -fwarn-tabs -funbox-strict-fields -O2
               -fno-warn-orphans -fno-warn-unused-do-bind

